# thesis

./: CMakeLists.txt  README.md  robot_control_new.hex  robot_control_new.ioc  robot_control_new.uvprojx  widget.cpp  widget.h  widget.ui
